crates/dayseam-macros/tests/trybuild/fail/activity_event_serde_default_without_audit.stderr
error: `ActivityEvent.dedup_token` is `#[serde(default)]` but carries no `#[serde_default_audit(...)]` annotation. Add either `#[serde_default_audit(repair = "NAME")]` (naming a registered `SerdeDefaultRepair` impl) or `#[serde_default_audit(no_repair = "reason")]` to document the deliberate waiver. Background: DOG-v0.2-04 / DAY-88 silent-failure sweep.
  --> tests/trybuild/fail/activity_event_serde_default_without_audit.rs:21:5
   |
21 | /     #[serde(default)]
22 | |     dedup_token: String,
   | |_______________________^
